[package]
name = "card_deck"
version = "0.1.8"
authors = ["storyfeet <thebeaky@psmail.net>"]
repository = "https://github.com/storyfeet/card_deck"
license = "MIT"
description = "A Generic Deck of Cards, with a draw and discard pile"
keywords = ["Generic","Card","Deck"]

[dependencies]

rand = "0.5.5"
