[package]
name = "card_deck"
edition = "2018"
version = "0.1.9"
authors = ["storyfeet <thebeaky@psmail.net>"]
repository = "https://github.com/storyfeet/card_deck"
license = "MIT"
description = "A Generic Deck of Cards, with a draw and discard pile"
keywords = ["Generic","Card","Deck"]
readme = "readme.md"

[dependencies]

rand = "0.5.5"
failure = "0.1.5"
failure_derive = "0.1.5"
